Auth added